--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pre-react-app",
-  "homepage" : "http://wesias7.github.io/pre-react-app",
+  "homepage": "http://wesias7.github.io/pre-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -46,7 +46,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -89,5 +91,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
